# RemoteComputerManagement

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  gen_certs.sh  run_tests.sh  start_docker.sh  summarize.sh  upgrade.sh
.cargo/: config.toml
RemoteComputerManagement-main/: .dockerignore  README.md  build.rs  gen_certs.sh  run_tests.sh  setup.sh  start_docker.sh
RemoteComputerManagement-main/.cargo/: config.toml
RemoteComputerManagement-main/docs/: README.md  architecture.md  builder.md  commands.md  deployment.md  extensions.md  fallback.md  operator-guide.md  panel.md
RemoteComputerManagement-main/extensions/: encrypt_test.rhai  inject_spawn_early_bird.rhai  localhost_audit.rhai  persistence_windows.rhai  ps.rhai
RemoteComputerManagement-main/fallback_profiles/: corporate_proxy.json  mixed_transport.json  simple_failover.json  staged_infrastructure.json
RemoteComputerManagement-main/modules/: die.rhai  mode_active.rhai  recon4.rhai  recon_linux.rhai  recon_windows.rhai  screenshot.rhai
RemoteComputerManagement-main/panel/: style.css
RemoteComputerManagement-main/panel/js/: app.js  auth.js  builder.js  extensions.js  ioc.js  jobview.js  loot.js  modules.js  procview.js  proxy.js  pulse.js  screenshots.js  tasks.js  terminal.js
RemoteComputerManagement-main/src/: lib.rs  pki.rs  socks.rs  traffic.rs  utils.rs
RemoteComputerManagement-main/src/agent/: artifacts.rs  jobs.rs  migrate.rs  pivot.rs
RemoteComputerManagement-main/src/api/: mod.rs  models.rs
RemoteComputerManagement-main/src/menu/: mod.rs  proxy.rs
RemoteComputerManagement-main/src/server/: http_listener.rs  listeners.rs
RemoteComputerManagement-main/tests/: test_database.rs  test_download.rs  test_extension.rs  test_jobs.rs  test_persistence.rs
RemoteComputerManagement-main/tests/docker/: Dockerfile  Dockerfile.unit  README.md  docker-compose.pivot.yml  docker-compose.unit.yml  docker-compose.windows.yml
RemoteComputerManagement-main/traffic_profiles/: jquery_cdn.json
certs/: ca.crt  client.crt  server.crt
dga_templates/: rotation.rhai  time_seeded.rhai
docs/: README.md  api.md  architecture.md  builder.md  commands.md  evasion.md  fallback.md  operator-guide.md  persistence.md  testing.md
extensions/: auto_persist.rhai  clipboard_poison.rhai  clipboard_thief.rhai  decrypt_test.rhai  drop_note.rhai  env_audit.rhai  grab_screen.rhai  hunter.rhai  inject_auto_stomp.rhai  inject_classic.rhai  inject_earlybird.rhai  inject_hunter.rhai  inject_module_stomping.rhai  inject_remote_apc.rhai  inject_remote_thread_hijack.rhai  inject_self.rhai  inject_spawn_advanced.rhai  persistence_linux.rhai  recursive_lock.rhai  recursive_unlock.rhai  scanner.rhai  screenshot.rhai  sysinfo.rhai
fallback_profiles/: multi_cloud_round_robin.json  pivot_chain.json  redirector_chain.json  weighted_random.json
modules/: auto_survey.rhai  camera_capture.rhai  crypt_all_linux.rhai  crypt_all_windows.rhai  crypt_current_dir_windows.rhai  decrypt_all_windows.rhai  mode_passive.rhai  recon.rhai  sound_capture.rhai
panel/: index.html  style.css
panel/js/: api.js  app.js  auditview.js  auth.js  builder.js  files.js  history.js  listeners.js  loot.js  modules.js  network.js  notes.js  notify.js  procview.js  proxy.js  pulse.js  recon.js  screenshots.js  shortcuts.js  tasks.js  terminal.js  theme.js  ui.js  users.js
scripts/client-side/: rs.go  rs.py
src/: common.rs  database.rs  evasion.rs  file_transfer.rs  lib.rs  pivot.rs  socks.rs  streaming_zip.rs  topology.rs  traffic.rs  transport.rs  utils.rs
src/agent/: config.rs  dga.rs  evasion.rs  fallback.rs  handlers.rs  hibernation.rs  http_transport.rs  inmem.rs  keylogger.rs  mod.rs  pivot.rs  scripting.rs  syscalls.rs
src/agent/evasion/: detection.rs  (+3 more)
src/api/: middleware.rs  mod.rs  models.rs  state.rs
src/menu/: handlers.rs  mod.rs  proxy.rs  ui.rs
src/server/: http_listener.rs  listeners.rs  logging.rs  mod.rs  session.rs
tests/: test_database.rs  test_dga.rs  test_evasion.rs  test_fallback.rs  test_file_transfer.rs  test_jobs.rs  test_keylogger.rs  test_python_bridge.rs  test_recursive_download.rs  test_scripting_crypto_compress.rs  test_scripting_io_fs.rs  test_scripting_network_dns.rs  test_scripting_process_memory.rs  test_scripting_search_state.rs  test_signing.rs  test_streaming_zip.rs  test_transport.rs  test_upload.rs  test_utils.rs
tests/docker/: Dockerfile  Dockerfile.unit  Dockerfile.windows  docker-compose.pivot.yml  docker-compose.unit.yml  docker-compose.windows.yml  docker-compose.yml
traffic_profiles/: amazon_update.json  cloudflare_dns.json  google_drive_api.json  slack_api.json
(+90 files in other folders)
